--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 node_modules/
+# Relatórios de Teste
+cypress/reports/
+
+# Arquivos de Cache do Python
+__pycache__/
+*.pyc
+
+# Banco de Dados
+*.sqlite3
+db.sqlite3
