feat: Criancao do perfil do usuario: - Agora o usuario pode ver seu perfil - Colocar uma foto de perfil - Editar o proprio perfil - Adicionar tags de comida preferida

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,14 @@ _mailinglist
 .pytest_cache/
 *.db
 *.sqlite3
+
+# Relatórios de Teste
+cypress/reports/
+
+# Arquivos de Cache do Python
+__pycache__/
+*.pyc
+
+# Banco de Dados
+*.sqlite3
+db.sqlite3
