--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Produto de Software envolvendo tecnologia e culinária",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "report": "cypress run"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,8 @@
   },
   "homepage": "https://github.com/S204-Inatel-2025-2/Saborize#readme",
   "devDependencies": {
-    "cypress": "^15.1.0"
+    "cypress": "^15.1.0",
+    "cypress-mochawesome-reporter": "^4.0.2",
+    "gremlins.js": "^2.2.0"
   }
 }
